# YakiEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  dependencies.cmake  vcpkg.json
Include/YakiEngine/Core/Assets/: AssetMngr.h  GltfObject.h  GltfUtils.h
Include/YakiEngine/Core/Components/: Children.h  CoreComponents.h  DirtyTransform.h  LocalToParent.h  LocalToWorld.h  MoveCommand.h  Parent.h  RotateEulerCommand.h  Rotation.h  ScaleCommand.h
Include/YakiEngine/Core/Systems/: InputSystem.h  MovementSystem.h  RendererSystem.h
Include/YakiEngine/Render/Assets/: AssetHandle.h  EnumAccessArray.h  GltfUtils.h  Material.h  MaterialBuilder.h  Mesh.h  Scene.h  Shader.h  ShaderEffect.h  ShaderPass.h  Texture.h  utils.h
Include/YakiEngine/Render/Components/: Camera.h  DefaultData.h  Drawable.h  DynamicObject.h  PointLight.h  RenderComponents.h  StaticObject.h
Include/YakiEngine/Render/Systems/: RendererSystem.h
Include/YakiEngine/Render/Vulkan/: Buffer.h  ComputePipelineBuilder.h  ImGuiStyles.h  PipelineBuilder.h  RenderObject.h  Renderer.h  Swapchain.h  VkTypes.h  VulkanContext.h
Include/YakiEngine/Render/Vulkan/Descriptors/: DescriptorAllocator.h  DescriptorLayoutBuilder.h
Src/App/: CMakeLists.txt  HashCubes.cpp  HashCubes.h  Sponza.h  main.cpp
Src/App/shaders/fragment/: instanced.frag  picking.frag  wireframe.frag
Src/App/shaders/vertex/: instanced.vert  materials.vert
Src/Core/: CMakeLists.txt
Src/Core/Assets/: AssetMngr.cpp  GltfUtils.cpp  Scene.cpp
Src/Core/Systems/: CameraSystem.cpp  InputSystem.cpp  MovementSystem.cpp  RendererSystem.cpp  TransformSystem.cpp
Src/Render/: CMakeLists.txt
Src/Render/Assets/: GltfUtils.cpp  MaterialBuilder.cpp  Scene.cpp  Texture.cpp
Src/Render/Systems/: CameraSystem.cpp  LightingSystem.cpp  PerformanceMeasureSystem.cpp  RendererSystem.cpp
Src/Render/Vulkan/: ComputePipelineBuilder.cpp  PipelineBuilder.cpp  Renderer.cpp  Swapchain.cpp  VkInit.cpp  VkUtils.cpp  VulkanContext.cpp
Src/Render/Vulkan/Descriptors/: DescriptorLayoutBuilder.cpp  DescriptorWriter.cpp
include/YakiEngine/App/: utils.h
include/YakiEngine/App/shaders/fragment/: materials.frag
include/YakiEngine/App/shaders/vertex/: wireframe.vert
include/YakiEngine/Core/: Ecs.h
include/YakiEngine/Core/Assets/: AssetMngr.h  GltfObject.h  GltfUtils.h  Mesh.h
include/YakiEngine/Core/Components/: CoreComponents.h  Drawable.h  LocalToWorld.h  Parent.h  Rotation.h
include/YakiEngine/Core/Systems/: CameraSystem.h  InputSystem.h  LightingSystem.h  MovementSystem.h  PerformanceMeasureSystem.h  PhysicsSystem.h  RendererSystem.h  TransformSystem.h
include/YakiEngine/Render/Assets/: GltfObject.h  MaterialBuilder.h  Texture.h
include/YakiEngine/Render/Components/: Camera.h  FramesPerSecond.h  RenderComponents.h
include/YakiEngine/Render/SDL/: Window.h
include/YakiEngine/Render/Systems/: CameraSystem.h  PerformanceMeasureSystem.h  RendererSystem.h
include/YakiEngine/Render/Vulkan/: DefaultData.h  DeletionQueue.h  PipelineBuilder.h  Renderer.h  Swapchain.h  VkTypes.h  VkUtils.h
include/YakiEngine/Render/Vulkan/Descriptors/: DescriptorLayoutBuilder.h  DescriptorWriter.h
shaders/: CMakeLists.txt
shaders/fragment/: first_triangle.frag  materials.frag
shaders/shared/: input_structures.glsl
shaders/vertex/: basic_mesh.vert  first_triangle.vert  materials.vert  picking.vert  wireframe.vert
src/: CMakeLists.txt  DefaultData.h  Ecs.h  ImGuiUtils.h  InputData.h  PropertyRegistry.h  Raycast.h  Transform.cpp  Transform.h  Window.h  main.cpp  utils.h
src/App/: CMakeLists.txt  main.cpp
src/Assets/: Asset.h  AssetMngr.cpp  AssetMngr.h  GltfObject.h  GltfUtils.cpp  GltfUtils.h  Material.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  Texture.cpp  Texture.h
src/Camera/: Camera.cpp  Camera.h
src/Components/: AmbientLight.h  Camera.h  Children.h  Collider.h  ColliderEntity.h  Components.h  Controller.h  DirectionalLight.h  Drawable.h  FramesPerSecond.h  GltfObject.h  Gui.h  Hovered.h  InputQueue.h  LocalToParent.h  LocalToWorld.h  ObjectInfo.h  Parent.h  ParentToLocal.h  PointLight.h  Property.h  RayTagged.h  RenderObject.h  Rotation.h  Scale.h  SpotLight.h  Translation.h
src/Core/: CMakeLists.txt
src/Core/Assets/: AssetMngr.cpp  GltfUtils.cpp  MaterialBuilder.cpp
src/Core/Systems/: InputSystem.cpp  LightingSystem.cpp  MovementSystem.cpp  PerformanceMeasureSystem.cpp  PhysicsSystem.cpp  RendererSystem.cpp  TransformSystem.cpp
src/Gui/: GuiRenderer.h
src/Render/: CMakeLists.txt
src/Render/Assets/: GltfUtils.cpp  MaterialBuilder.cpp  Texture.cpp
src/Render/Gui/: GuiRenderer.cpp  ItemList.h
src/Render/SDL/: Window.cpp
src/Render/Systems/: CameraSystem.cpp  LightingSystem.cpp  PerformanceMeasureSystem.cpp  RendererSystem.cpp
src/Render/Vulkan/: DefaultData.h  DeletionQueue.cpp  Renderer.cpp  Swapchain.cpp  VkInit.cpp  VkUtils.cpp
src/Render/Vulkan/Descriptors/: DescriptorAllocator.cpp  DescriptorWriter.cpp
src/Systems/: CameraSystem.cpp  CameraSystem.h  ControllerSystem.cpp  ControllerSystem.h  GuiSystem.cpp  GuiSystem.h  InputSystem.cpp  InputSystem.h  LightingSystem.cpp  LightingSystem.h  MovementSystem.cpp  MovementSystem.h  PerformanceMeasureSystem.cpp  PerformanceMeasureSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RendererSystem.cpp  RendererSystem.h  TransformSystem.cpp  TransformSystem.h
src/Vulkan/: Buffer.h  DeletionQueue.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  MetallicRoughnessMaterial.cpp  MetallicRoughnessMaterial.h  PipelineBuilder.cpp  PipelineBuilder.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  VkCheck.h  VkInit.cpp  VkInit.h  VkTypes.h  VkUtils.cpp  VkUtils.h  VulkanContext.cpp  VulkanContext.h
src/Vulkan/Descriptors/: DescriptorAllocator.h  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.h  DescriptorWriter.h
src/Vulkan/Gltf/: GltfObject.h  GltfUtils.cpp  GltfUtils.h
